Fixed the overlapping search box on the keyword screen

--- a/styles.css
+++ b/styles.css
@@ -127,7 +127,7 @@ a:hover  { color: #7C14B8; }
 .formButtonArea input { margin:5px 0; }
 .formEntryArea { }
 .formRequired { color:#990000;font-weight:bold;font-size:1.3em;position:relative;top:5px; }
-.formsTogether { width:780px; }
+.formsTogether { width:95%; }
 .formsTogether .form1Part { width:96%; }
 
 .additionalCopies { margin: 20px 6px; }
@@ -685,7 +685,7 @@ width:55%;
 
 .mainSearch .form1Part { float:none; margin: 36px 0; text-align:center; }
 
-.mainSearch .form1Part, .mainMenuContent { width:50em; margin-left:auto; margin-right:auto;  }
+.mainSearch .form1Part, .mainMenuContent { width:83%; margin-left:auto; margin-right:auto;  }
 
 .minHeight { height:100%; width:97%; margin-left:auto; margin-right:auto; background:#ffffff; padding-bottom:0; padding-top:0; }
 
@@ -734,7 +734,7 @@ padding:2px;
 float:right;
 margin-left:1%;
 padding:1%;
-width:73%;
+width:71%;
 }
 
 .pageContentInner > br { display:none; }
